# foodgram-project-react

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: foodgram_workflow.yaml
backend/: Dockerfile  dbdump.json  pyproject.toml  requirements.txt
backend/api/: filters.py  paginator.py  permissions.py  serializers.py  urls.py  views.py
backend/foodgram/: settings.py  urls.py
backend/recipes/: admin.py  models.py
backend/recipes/management/commands/: populate_ingredients.py
backend/recipes/migrations/: 0001_initial.py  0002_initial.py  0003_alter_ingredient_options_and_more.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
infra/: docker-compose.yml  nginx.conf
tests/: test_foodgram_project_react.py
